# renovate

./: .gitignore  .pre-commit-config.yaml  README.md  default.json  pyproject.toml
.github/: renovate.json
.github/workflows/: process_renovate_config.py  renovate-package-lock.json  renovate-package.json  renovate_checker.yml  test.yml
