[project]
name = "renovate"
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "Thomas Kristensen", email = "thomas@sl.m04r.space" }
]
requires-python = ">=3.11"
classifiers = ["Private :: Do Not Upload"]

[tool.aliases]
check = "uv run pre-commit run --all-files"

[tool.uv.sources]
pyproject-aliases = { git = "https://github.com/tkk2112/pyproject_aliases.git" }

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pyproject-aliases",
]
